<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UnregisteredUserForm"
    android:background="@drawable/blue_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="42dp"
        android:layout_height="21dp"

        android:layout_marginTop="140dp"
        android:layout_marginRight="159dp"
        android:layout_marginLeft="159dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_gravity="center"
        android:contentDescription="@string/logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="295dp"
        android:layout_height="317dp"
        android:layout_marginLeft="32.5dp"
        android:layout_marginRight="32.5dp"
        android:layout_marginTop="93dp"
        android:padding="@dimen/card_padding"



        android:layout_gravity="center"
       android:layout_margin="50dp"


        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_radius">
        <TextView
            android:layout_width="144dp"
            android:layout_height="20dp"

            android:textColor="@color/textColor"
            android:text="@string/Unregistered_User"
            android:textStyle="bold"
            android:layout_gravity="top|center"
            android:layout_marginTop="20dp"
            android:layout_marginRight="75.5dp"
            android:layout_marginLeft="75.5dp"
            android:textSize="16sp"/>


        <EditText
            android:id="@+id/pan_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_marginTop="91dp"
            android:layout_marginLeft="15.5dp"
            android:layout_marginRight="14.5dp"
            android:backgroundTint="@color/black"
            android:hint="@string/pan_number"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/aadhar_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="149dp"
            android:layout_marginRight="14.5dp"
            android:layout_marginLeft="15.5dp"

            android:backgroundTint="@color/black"
            android:hint="@string/aadhar_number"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/tvLater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="41.5dp"
            android:layout_marginTop="204dp"
            android:layout_marginRight="70.5dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:text="@string/Reminder"
            android:textColor="@color/solid_button_color"
            android:textSize="14sp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="260dp"
            android:layout_marginLeft="15.5dp"
            android:layout_marginRight="15.5dp"
            android:layout_marginBottom="17dp">
            <Button
                android:id="@+id/btn_back"
                android:layout_width="92dp"

                android:layout_height="40dp"
                android:text="@string/back"
                android:textColor="@color/solid_button_color"
                android:textAllCaps="false"
                android:background="@drawable/hollow_blue_button"

                android:layout_marginRight="80dp"
                 />
            <Button
                android:id="@+id/btn_next"
                android:layout_width="92dp"

                android:layout_height="40dp"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@drawable/solid_button"
                android:layout_gravity="end"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
