<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="640dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisteredUserForm"
    android:background="@drawable/blue_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="42dp"
        android:layout_height="21dp"

        android:layout_marginTop="140dp"
        android:layout_marginLeft="159dp"
        android:layout_marginRight="159dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_gravity="center"
        android:contentDescription="@string/logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="295dp"
        android:layout_height="317dp"

        android:padding="@dimen/card_padding"
        android:layout_gravity="center"
        android:layout_marginTop="93dp"
        android:layout_marginRight="32.5dp"
        android:layout_marginLeft="32.5dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_radius">
        <TextView

            android:layout_width="127dp"
            android:layout_height="20dp"
            android:textColor="@color/textColor"
            android:text="@string/registered"
            android:textStyle="bold"
            android:layout_gravity="top|center"
            android:layout_marginTop="19dp"
            android:layout_marginLeft="84.5dp"
            android:layout_marginRight="83.5dp"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/gst_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginRight="14.5dp"
            android:layout_marginLeft="18.5dp"
            android:hint="@string/gst_input"
            android:backgroundTint="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp"

            android:textColor="@color/black"
            android:autofillHints="@string/gst_input"/>
        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="115dp"
            android:layout_marginRight="14.5dp"
            android:layout_marginLeft="14.5dp"
            android:hint="@string/gst_input"
            android:backgroundTint="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp"

            android:textColor="@color/black"
            android:autofillHints="@string/address"/>
        <EditText
            android:id="@+id/alt_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:layout_marginRight="14.5dp"
            android:layout_marginLeft="12.5dp"
            android:hint="@string/alternate_mobile"
            android:backgroundTint="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp"

            android:textColor="@color/black"
            android:autofillHints="@string/gst_input"/>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center|bottom"
            android:layout_marginLeft="12.5dp"
            android:layout_marginRight="15.5dp"
            android:layout_marginBottom="34dp">
            <Button
                android:id="@+id/back_button"
                android:layout_width="92dp"

                android:layout_height="40dp"
                android:text="@string/back"
                android:textColor="@color/solid_button_color"
                android:textAllCaps="false"
                android:background="@drawable/hollow_blue_button"

                android:layout_marginRight="83dp"
                />
            <Button
                android:id="@+id/next_button"
                android:layout_width="92dp"

                android:layout_height="40dp"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@drawable/solid_button"
                android:layout_gravity="end"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
