<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTPVerification"
    android:background="@drawable/blue_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="@dimen/logo_margin"
        android:src="@mipmap/ic_launcher_round"
        android:layout_gravity="center"
        android:contentDescription="@string/logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_radius">
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:orientation="vertical">-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="@string/login"
                android:textStyle="bold"
                android:layout_gravity="top|center"
                android:layout_marginTop="@dimen/title_margin_short"
                android:layout_marginBottom="@dimen/title_margin_short"
                android:textSize="@dimen/title_size"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/edittext_margin">
                <EditText
                    android:id="@+id/mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/edittext_margin"
                    android:layout_marginRight="@dimen/edittext_margin"
                    android:hint="@string/enter_your_number"
                    android:backgroundTint="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:textSize="@dimen/text_size"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/call_icon"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:autofillHints="@string/enter_your_number"
                    android:drawableStart="@drawable/call_icon" />
                <EditText
                    android:id="@+id/otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_otp"
                    android:layout_marginLeft="72dp"
                    android:layout_marginRight="72dp"
                    android:backgroundTint="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:textSize="@dimen/text_size"
                    android:maxLength="6"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/otp_unlock"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:autofillHints=" Enter OTP"
                    android:drawableStart="@drawable/otp_unlock" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/we_will_automatically_get_your_otp"
                    android:layout_margin="@dimen/textview_margin"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center|bottom"
                android:layout_marginLeft="@dimen/textview_margin"
                android:layout_marginRight="@dimen/textview_margin"
                android:layout_marginBottom="@dimen/title_margin_short">
                <Button
                    android:id="@+id/back_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textColor="@color/solid_button_color"
                    android:textAllCaps="false"
                    android:background="@drawable/hollow_blue_button"
                    android:layout_gravity="start"
                    android:layout_marginRight="@dimen/title_margin_short"
                    android:layout_marginEnd="@dimen/title_margin_short" />
                <Button
                    android:id="@+id/next_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:background="@drawable/solid_button"
                    android:layout_gravity="end"/>
            </LinearLayout>
<!--        </LinearLayout>-->
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/register_here"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/new_user_register_here"
        android:layout_gravity="center"
        android:clickable="true"
        android:textColor="@color/text_color"
        android:layout_marginBottom="@dimen/register_margin"
        android:focusable="true"
        android:textSize="@dimen/text_size">
    </TextView>

</LinearLayout>