<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="640dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@drawable/blue_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="42dp"
        android:layout_height="21dp"

        android:layout_marginTop="140dp"
        android:layout_marginRight="159dp"
        android:layout_marginLeft="159dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"/>
       
    <androidx.cardview.widget.CardView
        android:layout_width="295dp"
        android:layout_height="317dp"

        android:padding="@dimen/card_padding"
        android:layout_gravity="center"
       android:layout_marginTop="93dp"
        android:layout_marginRight="32.5dp"
        android:layout_marginLeft="32.5dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_radius">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="@string/login"
                android:textStyle="bold"
                android:layout_gravity="top|center"
                android:layout_marginTop="27dp"
                android:layout_marginRight="121.5dp"
                android:layout_marginLeft="121.5dp"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="132dp"
                android:layout_marginLeft="14.5dp"
                android:layout_marginRight="14.5dp"
                android:hint="@string/enter_your_number"
                android:backgroundTint="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp"

                android:drawableLeft="@drawable/call_icon"
                android:inputType="number"
                android:textColor="@color/black"
                android:autofillHints="@string/enter_your_number"
                android:drawableStart="@drawable/call_icon" />
            <Button
                android:id="@+id/next_button"
                android:layout_width="172dp"
                android:layout_height="40dp"
                android:text="@string/next"
                android:textAllCaps="false"
                android:background="@drawable/solid_button"
                android:layout_marginLeft="61.5dp"
                android:layout_marginRight="61.5dp"
                android:layout_marginTop="232dp"
                android:layout_marginBottom="46dp"
                android:textColor="@color/white"
                android:layout_gravity="center|bottom"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/register_here"
        android:layout_width="146dp"
        android:layout_height="19dp"
        android:layout_gravity="center"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="107dp"
        android:layout_marginRight="107dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/new_user_register_here"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size" />

</LinearLayout>