<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/blue_background"
    tools:context="com.example.android.maadhyam.location">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="42dp"
        android:layout_height="21dp"

        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="159dp"
        android:layout_marginRight="159dp"
        android:contentDescription="@string/logo"
        android:src="@mipmap/ic_launcher_round" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="135.4dp"
        android:layout_height="160.5dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/app_logo"
        android:layout_marginTop="87.3dp"
        android:layout_marginLeft="112.4dp"
        android:layout_marginRight="112.4dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/delivery_location_img" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="295dp"
        android:layout_height="317dp"
        android:layout_marginLeft="32.5dp"
        android:layout_marginRight="32.5dp"
        android:layout_marginBottom="69dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/image"
        android:layout_marginTop="-20dp"
        android:padding="@dimen/card_padding"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="@dimen/card_elevation">


        <TextView

            android:id="@+id/tvView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="19dp"
            android:layout_marginRight="74.5dp"
            android:layout_marginLeft="84.5dp"
            android:text="@string/delivery_location"
            android:textColor="@color/textColor"

            android:textSize="@dimen/title_size"


            android:textStyle="bold" />

        <EditText
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="132dp"
            android:layout_marginLeft="18.5dp"
            android:layout_marginRight="14.5dp"
            android:autofillHints="Enter_Delivery_Location"
            android:backgroundTint="@color/black"
            android:hint="@string/enter_your_delivery_location"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp">
        </EditText>
        <TextView
            android:id="@+id/choose_maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_maps"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="175dp"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/gps_icon" />
        <Button
            android:id="@+id/btnNext"
            android:layout_width="172dp"
            android:layout_height="40dp"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="232dp"
            android:layout_marginLeft="61.5dp"
            android:layout_marginRight="61.5dp"
            android:layout_marginBottom="45dp"
            android:background="@drawable/solid_button"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textAllCaps="false" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>
