<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserType"
    android:background="@drawable/blue_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="42dp"
        android:layout_height="21dp"

        android:layout_marginTop="140dp"
        android:layout_marginLeft="159dp"
        android:layout_marginRight="159dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_gravity="center"
        android:contentDescription="@string/logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="298dp"
        android:layout_height="317dp"

        android:padding="@dimen/card_padding"
        android:layout_gravity="center"
        android:layout_marginTop="93dp"
        android:layout_marginLeft="32.5dp"
        android:layout_marginRight="32.5dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_radius">

        <LinearLayout
            android:layout_width="298dp"
            android:layout_height="317dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center_horizontal">
            <TextView

                android:layout_width="180dp"
                android:layout_height="18dp"
                android:textColor="@color/textColor"
                android:text="@string/select_option"
                android:textStyle="bold"
                android:layout_gravity="top|center"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="57.5dp"
                android:layout_marginRight="57.5dp"

                android:textSize="16sp"/>

            <RadioGroup

                android:id="@+id/radio_reg_unreg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/reg_user"
                    android:layout_width="215dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="56dp"
                    android:layout_marginTop="57dp"
                    android:layout_marginRight="99dp"
                    android:buttonTint="@color/solid_button_color"
                    android:paddingStart="31dp"
                    android:text="@string/registered"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size"

                    android:paddingLeft="31dp" />


                <RadioButton
                    android:id="@+id/unreg_user"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="56dp"
                    android:layout_marginTop="44dp"
                    android:layout_marginRight="56dp"
                    android:paddingStart="24dp"
                    android:text="@string/Unregistered_User"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size"


                    android:paddingLeft="24dp" 
                    android:buttonTint="@color/solid_button_color"/>


            </RadioGroup>
            <Button
                android:id="@+id/next_button"
                android:layout_width="172dp"
                android:layout_height="40dp"
                android:text="@string/next"
                android:textAllCaps="false"
                android:background="@drawable/solid_button"
                android:layout_marginTop="43dp"
                android:layout_marginLeft="61.5dp"
                android:layout_marginRight="61.5dp"
                android:enabled="false"
                android:textColor="@color/white"
                android:layout_gravity="center|bottom"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
