<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    tools:context=".SelectAndAddItems">
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="@dimen/logo_small_size"
        android:layout_height="@dimen/logo_small_size"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/logo_very_short_margin"
        android:contentDescription="@string/logo"
        android:src="@mipmap/ic_launcher_round" />
    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/card_margin_short"
        android:layout_marginRight="@dimen/card_margin_short"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_centerInParent="true"
        android:layout_below="@+id/app_logo"
        android:layout_marginTop="@dimen/logo_very_short_margin"
        android:padding="@dimen/card_padding"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="@dimen/card_elevation">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_brand"
                    android:textStyle="bold"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/title_size"
                    android:gravity="center_horizontal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                android:gravity="bottom"
                android:layout_alignParentBottom="true">
                <Button
                    android:id="@+id/back_btn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textColor="@color/solid_button_color"
                    android:textAllCaps="false"
                    android:background="@drawable/hollow_blue_button"
                    android:layout_gravity="left"
                    android:layout_marginRight="10dp"
                   />

                <Button
                android:id="@+id/changeCategory_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/change_category"
                android:textSize="12sp"
                android:textColor="@color/solid_button_color"
                android:textAllCaps="false"
                android:background="@drawable/hollow_blue_button"
                android:layout_gravity="center_horizontal"/>


                <Button
                    android:id="@+id/next_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/solid_button"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="#ffffff" />
            </LinearLayout>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/scroll_view_margin_short"
                    android:layout_marginBottom="@dimen/scroll_view_margin">
                    <LinearLayout
                        android:id="@+id/parent_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    </LinearLayout>
                </ScrollView>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
